enr reports with dashboard

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -386,6 +386,26 @@
               <transport-feepaiddue-report></transport-feepaiddue-report>
             </div>
           </section>
+          <section data-category="tc-report">
+            <div class="col-md-12">
+              <tc-report></tc-report>
+            </div>
+          </section>
+          <section data-category="withdrawal-report">
+            <div class="col-md-12">
+              <withdrawal-report></withdrawal-report>
+            </div>
+          </section>
+          <section data-category="rte-report">
+            <div class="col-md-12">
+              <rte-report></rte-report>
+            </div>
+          </section>
+          <section data-category="enrollment-daily-dashboard">
+            <div class="col-md-12">
+              <enrollment-daily-dashboard></enrollment-daily-dashboard>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
