--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -325,3 +325,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="zonechangecollection-card/zonechangecollection-card.html">
 <link rel="import" href="transport-cancellation-card/transport-cancellation-card.html">
 <link rel="import" href="transport-feepaiddue-report/transport-feepaiddue-report.html">
+<link rel="import" href="tc-report/tc-report.html">
+<link rel="import" href="withdrawal-report/withdrawal-report.html">
+<link rel="import" href="rte-report/rte-report.html">
+<link rel="import" href="discontinued-report/discontinued-report.html">
+<link rel="import" href="enrollment-dashboard/enrollment-dashboard.html">
+<link rel="import" href="enrollment-daily-dashboard/enrollment-daily-dashboard.html">
+<link rel="import" href="dashboard-service/dashboard-service.html">
