--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -520,6 +520,9 @@
         document.querySelector('detaildaycollection-report').gradearr=gradearr;
         document.querySelector('detailed-feedue-report').gradearr=gradearr;
         document.querySelector('enrollment-report').gradearr=gradearr;
+        document.querySelector('tc-report').gradearr=gradearr;
+        document.querySelector('withdrawal-report').gradearr=gradearr;
+        document.querySelector('rte-report').gradearr=gradearr;
         document.querySelector('daycollection-report').gradearr=gradearr;
         document.querySelector('notpaid-report').gradearr=gradearr;
         document.querySelector('notpaid-report').FnSetArray(gradearr);
@@ -571,6 +574,9 @@
         document.querySelector('cancel-enrollment-card').academicarr=e.detail.response.returnval;
         document.querySelector('gradewise-fee-structure-report').academicarr=e.detail.response.returnval;
         document.querySelector('enrollment-report').academicarr=e.detail.response.returnval;
+        document.querySelector('tc-report').academicarr=e.detail.response.returnval;
+        document.querySelector('withdrawal-report').academicarr=e.detail.response.returnval;
+        document.querySelector('rte-report').academicarr=e.detail.response.returnval;
         document.querySelector('notpaid-report').academicarr=e.detail.response.returnval;
         document.querySelector('detailed-feedue-report').academicarr=e.detail.response.returnval;
         document.querySelector('dailycollection-dashboard').academicarr=e.detail.response.returnval;
