--- a/app/test/index.html
+++ b/app/test/index.html
@@ -29,7 +29,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       'my-list-basic.html',
       'my-list-basic.html?dom=shadow',
       'feetype-delete-card-basic.html',
-      'feetype-delete-card-basic.html?dom=shadow'
+      'feetype-delete-card-basic.html?dom=shadow',
+      'enrollment-dashboard-basic.html',
+      'enrollment-dashboard-basic.html?dom=shadow'
     ]);
   </script>
 
