--- a/app/elements/transport-processing-service/transport-processing-service.html
+++ b/app/elements/transport-processing-service/transport-processing-service.html
@@ -129,6 +129,7 @@
         obj.chequeno=(cheque[i].cheque_no);        
         obj.bankname=cheque[i].bank_name; 
         obj.chequestatus=cheque[i].status; 
+        obj.waiveoff=cheque[i].waiveoff;
         obj.studentname=studentname;
         obj.canceldate=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
         this.updatetransportchequestatusparam=obj;     
