--- a/app/elements/zonechange-card/zonechange-card.html
+++ b/app/elements/zonechange-card/zonechange-card.html
@@ -105,6 +105,12 @@
         this.hidezonebtn=true;
       },
       FnSubmit:function(){
+        if(this.payableamount==""||this.payableamount==null||this.payableamount<=0)
+        {
+          alert("Enter valid amount!!");
+          this.payableamount="";
+        }
+        else
         this.$.service.FnSaveZoneChangeInfo(zoneid,zonename,this.payableamount,mode);
       },
       FnAllocateZone:function(){
@@ -115,23 +121,24 @@
       },
       FnSetZoneFee:function(fee){
         var newzonefee=fee;
-        var newzonepermonthfee=100 * Math.ceil((parseFloat(parseFloat(newzonefee)/12).toFixed(2)) / 100);
-        var totalmonth=12;
-        var newzoneremainingmonth=parseFloat(totalmonth)-parseFloat(this.usedmonth);
-        var newzoneremainingfee=parseFloat(newzoneremainingmonth)*parseFloat(newzonepermonthfee);
-        var oldzoneremainingfee=parseFloat(this.previouszonefee)-parseFloat(this.usedfee);
-        if(newzoneremainingfee>=oldzoneremainingfee){
-        var newzonepayablefee=parseFloat(newzoneremainingfee)-parseFloat(oldzoneremainingfee);
-        this.dynamiclabel="Payable Amount";
-        this.payableamount=newzonepayablefee;
         mode="Payable";
-        }
-        else{
-        var newzonepayablefee=parseFloat(oldzoneremainingfee)-parseFloat(newzoneremainingfee);
-        this.dynamiclabel="Return Amount";
-        this.payableamount=newzonepayablefee;
-        mode="Return";
-        }
+        // var newzonepermonthfee=100 * Math.ceil((parseFloat(parseFloat(newzonefee)/12).toFixed(2)) / 100);
+        // var totalmonth=12;
+        // var newzoneremainingmonth=parseFloat(totalmonth)-parseFloat(this.usedmonth);
+        // var newzoneremainingfee=parseFloat(newzoneremainingmonth)*parseFloat(newzonepermonthfee);
+        // var oldzoneremainingfee=parseFloat(this.previouszonefee)-parseFloat(this.usedfee);
+        // if(newzoneremainingfee>=oldzoneremainingfee){
+        // var newzonepayablefee=parseFloat(newzoneremainingfee)-parseFloat(oldzoneremainingfee);
+        // this.dynamiclabel="Payable Amount";
+        // this.payableamount=newzonepayablefee;
+        // mode="Payable";
+        // }
+        // else{
+        // var newzonepayablefee=parseFloat(oldzoneremainingfee)-parseFloat(newzoneremainingfee);
+        // this.dynamiclabel="Return Amount";
+        // this.payableamount=newzonepayablefee;
+        // mode="Return";
+        // }
         this.hidezonebtn=false;        
       },
       FnSelectZone:function(e){
@@ -151,35 +158,35 @@
         var endmonth=(enddate.getMonth()+1)+1;
         var startday=startdate.getDate();
         var endday=enddate.getDate();
-        if(startyear==endyear){        
-          if(endmonth>=startmonth){
-            if(startmonth==endmonth){
-            if((parseInt(endday)-parseInt(startday))<=15){
-              var usedmonth=0;
-              var actualfees=this.previouszonefee;
-              var usedfee=0;
-              this.usedmonth=usedmonth;
-              this.usedfee=usedfee;
-            }
-            else{
-            var usedmonth=parseInt(endmonth)-parseInt(startmonth);
-            var actualfees=this.previouszonefee;
-            var oldpermonthfee=100 * Math.ceil((parseFloat(parseFloat(this.previouszonefee)/12).toFixed(2)) / 100);
-            var usedfee=parseFloat(usedmonth)*parseFloat(oldpermonthfee);
-            this.usedmonth=usedmonth;
-            this.usedfee=usedfee;
-            }
-            }
-            else{
-            var usedmonth=parseInt(endmonth)-parseInt(startmonth);
-            var actualfees=this.previouszonefee;
-            var oldpermonthfee=100 * Math.ceil((parseFloat(parseFloat(this.previouszonefee)/12).toFixed(2)) / 100);
-            var usedfee=parseFloat(usedmonth)*parseFloat(oldpermonthfee);
-            this.usedmonth=usedmonth;
-            this.usedfee=usedfee;
-            }
-          }
-        }
+        // if(startyear==endyear){        
+        //   if(endmonth>=startmonth){
+        //     if(startmonth==endmonth){
+        //     if((parseInt(endday)-parseInt(startday))<=15){
+        //       var usedmonth=0;
+        //       var actualfees=this.previouszonefee;
+        //       var usedfee=0;
+        //       this.usedmonth=usedmonth;
+        //       this.usedfee=usedfee;
+        //     }
+        //     else{
+        //     var usedmonth=parseInt(endmonth)-parseInt(startmonth);
+        //     var actualfees=this.previouszonefee;
+        //     var oldpermonthfee=100 * Math.ceil((parseFloat(parseFloat(this.previouszonefee)/12).toFixed(2)) / 100);
+        //     var usedfee=parseFloat(usedmonth)*parseFloat(oldpermonthfee);
+        //     this.usedmonth=usedmonth;
+        //     this.usedfee=usedfee;
+        //     }
+        //     }
+        //     else{
+        //     var usedmonth=parseInt(endmonth)-parseInt(startmonth);
+        //     var actualfees=this.previouszonefee;
+        //     var oldpermonthfee=100 * Math.ceil((parseFloat(parseFloat(this.previouszonefee)/12).toFixed(2)) / 100);
+        //     var usedfee=parseFloat(usedmonth)*parseFloat(oldpermonthfee);
+        //     this.usedmonth=usedmonth;
+        //     this.usedfee=usedfee;
+        //     }
+        //   }
+        // }
       },
       callService:function(){
         this.$.service.fetchallstudentforzoneService();
