--- a/app/elements/cheque-realization-itemcard/cheque-realization-itemcard.html
+++ b/app/elements/cheque-realization-itemcard/cheque-realization-itemcard.html
@@ -12,7 +12,7 @@
       <table class="table table-hover" id="collectionreport">
       <thead>
       <tr>
-        <td>{{sno}}</td><td>{{enrno}}</td><td>{{studentname}}</td><td>{{grade}}</td><td>{{installmenttype}}</td><td>{{chequeno}}</td><td>{{bankname}}</td><td>{{paiddate}}</td><td>{{installmentamount}}</td><td><paper-checkbox style="margin: 0; padding: 0;" id="cheque{{sno}}" class="checkbox" on-change="FnChangeStatus" checked></paper-checkbox></td>
+        <td>{{sno}}</td><td width="10%" style="text-align: left;">{{enrno}}</td><td width="15%" style="text-align: left;">{{studentname}}</td><td width="10%" style="text-align: left;">{{grade}}</td><td width="10%" style="text-align: left;">{{installmenttype}}</td><td width="10%" style="text-align: left;">{{chequeno}}</td><td width="10%" style="text-align: left;">{{bankname}}</td><td width="10%" style="text-align: left;">{{paiddate}}</td><td width="10%" style="text-align: left;">{{installmentamount}}</td><td width="10%" style="text-align: left;"><paper-checkbox style="margin: 0; padding: 0;" id="cheque{{sno}}" class="checkbox" on-change="FnChangeStatus" checked></paper-checkbox></td>
       </tr>
       </thead>
 
