--- a/app/elements/cheque-realization-card/cheque-realization-card.html
+++ b/app/elements/cheque-realization-card/cheque-realization-card.html
@@ -19,17 +19,28 @@
                 <div class="col-md-2" style="margin-top: 2%;">
                   <fromdate-icon-pickercard></fromdate-icon-pickercard>
                 </div>
-                <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;">
+                <div class="col-md-2" style="margin-top: 2%;margin-left: -3%;">
                   <todate-icon-pickercard></todate-icon-pickercard>
                 </div>
                 <div class="col-md-1" style="margin-top: 2.5%;margin-left: 5%;">
                   <paper-button style="height:30px;text-transform: none;" on-click="FnView" class="btn btn-primary">View</paper-button>
                 </div>
+                <div class="col-md-1" style="margin-top: 2.5%;margin-left: 5%;">
+                (OR)
+                </div>
+                <div class="col-md-3" style="margin-top: 0%;">
+                   <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchEnquiry"></paper-input>
+                   <paper-listbox class="dropdown-content" id="chequerealiseinput1" on-iron-select="FnSelectEnquiry">
+                   <template is="dom-repeat" items="{{itemArray}}" as="item">
+                   <paper-item value="{{item.admission_no}}">{{item.itemdes}}</paper-item>
+                   </template>
+                   </paper-listbox>
+                </div>
                 <!-- <div class="col-md-2" style="margin-top: 1%;">
                   <input type="button" id="btn2" onclick="tableToExcel('realizationreport', 'Fee Collection Report')" value="Export to Excel">
                 </div> -->
-                <div class="col-md-1" style="margin-top: 2.5%;margin-left: 10%;">
-                  <paper-button style="height:30px;text-transform: none;" on-click="FnSubmit" class="btn btn-primary">Submit</paper-button>
+                <div class="col-md-1" style="margin-top: 2.5%;margin-left: 5%;">
+                  <paper-button style="height:30px;text-transform: none;" on-click="FnSubmit" class="btn btn-primary">Process</paper-button>
                 </div>
             </div>
           </div>
@@ -52,6 +63,7 @@
       </table>
     </div>
     <processing-service id="processingservice"></processing-service>
+    <admission-service id="admissionservice"></admission-service>
   </template>
   <script type="text/javascript">
       var tableToExcel = (function() {
@@ -70,18 +82,26 @@
   (function() {
     'use strict';
     var allchequesarr=[];
+    var item=[];
     Polymer({
       is: 'cheque-realization-card',
-      FnCallService:function(){
-        this.$.processingservice.FnFetchprocessingchequeService();
+      ready:function(){
+        this.querySelector('#chequerealiseinput1').style.visibility='hidden';
       },
+      // FnCallService:function(){
+      //   this.$.processingservice.FnFetchprocessingchequeService();
+      // },
       FnView:function(){
-        this.$.processingservice.FnFetchprocessingchequeService();
+        this.$.processingservice.FnFetchprocessingchequeService('','datesearch');
       },
       FnSetChequeArray:function(arr){
         allchequesarr=arr;
+        for(var i=0;i<allchequesarr.length;i++)
+        allchequesarr[i].status='cleared';
       },
       FnPushPopCheques:function(sno,status,flag){
+        // alert(JSON.stringify(allchequesarr));
+        // alert(sno+"  "+status+"  "+flag);
         for(var i=0;i<allchequesarr.length;i++){
           if(allchequesarr[i].sno==sno){
             if(flag==1)
@@ -92,7 +112,7 @@
         }
       },
       FnSubmit:function(){
-        alert('If you press submit it will clear all the cheques...Please process all the cheques which is not cleared...');
+        alert('If you press submit it will clear all the cheques...Please uncheque if is not cleared...');
         // alert(JSON.stringify(allchequesarr));
         if(allchequesarr.length>0) 
         this.$.processingservice.FnUpdateChequeStatus(allchequesarr);
@@ -104,7 +124,91 @@
         document.querySelector('fromdate-icon-pickercard').ready();
         document.querySelector('todate-icon-pickercard').ready();
         // this.$.processingservice.FnFetchprocessingchequeService();
+      },
+      FnCallService:function(){
+        this.$.admissionservice.fetchallstudentforsearchService();
+      },
+      autocompletearr:function(autocompletearr)
+      {
+         item=autocompletearr;
+      },
+      FnSearchEnquiry:function(e){
+      if(e.keyCode==13|| e.keyCode==40)
+      this.querySelector('#chequerealiseinput1').focus();
+      var arr=[];
+      arr.push({"itemdes":"-----Select-----"});
+      this.querySelector('#chequerealiseinput1').style.visibility='visible';
+      if(e.keyCode==8){
+        this.itemflag="true";
+        this.itemval="";
+        //alert('yes');
+        var len=(this.value).length;
+        if(len<=1){
+          this.querySelector('#chequerealiseinput1').style.visibility='hidden';
+          this.itemArray="";
+          this.itemval="";
+        }
+        if(len>1){
+          this.querySelector('#chequerealiseinput1').style.visibility='visible';
+          var backsubval=(((this.value).substring(0,(len-1))).trim()).toUpperCase();
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,backsubval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          this.itemArray=arr;
+        }
       }
+      if(e.keyCode!=8&& e.keyCode!=16&& e.keyCode!=13 && e.keyCode!=38&&e.keyCode!=40&&e.keyCode!=37&&e.keyCode!=39){
+        if(this.itemflag=="true") {
+          this.itemval = (this.value).toUpperCase()+String.fromCharCode((e.keyCode)).toUpperCase();
+          this.itemflag="false";
+        }
+        else
+        this.itemval = this.value +String.fromCharCode((e.keyCode));
+        if(this.itemval.length>0)
+        {
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,this.itemval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.itemval).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          if(arr.length>0)
+            this.itemArray=arr;
+          else
+          {
+            var obj={"itemdes":"","enquiry_no":""};
+            obj.itemdes="No items found";
+            arr.push(obj);
+            this.itemArray=arr;
+          }
+        }
+      }
+    },
+    FnSelectEnquiry:function(e){
+    this.querySelector('#chequerealiseinput1').style.visibility='hidden';
+    var enquiry_name = e.target.selectedItem.textContent.trim();
+    var admission_no = e.target.selectedItem.value.trim();
+    localStorage.setItem("curr_sess_enquiryno",admission_no);
+    localStorage.setItem("curr_sess_enquiryname",enquiry_name);
+    this.itemArray=[];
+    document.querySelector('#chequerealiseinput1').selected=-1;
+    this.value=enquiry_name;
+    this.$.processingservice.FnFetchprocessingchequeService(admission_no,'namesearch');
+    // this.$.processingservice.processbouncechequeService(admission_no);
+    },
 
     });
   })();
